# breast-cancer-cmmd

./: .dockerignore  .gitignore  .python-version  Dockerfile  Makefile  README.org  pyproject.toml  run-experiments.py  run-experiments.sh
assets/: meta.csv
best-results/: meta-test.csv  meta-train.csv  meta-val.csv  test-agg-results.csv  test-results.csv
breastclf/: cmmd.py  main.py  run-experiments.py
breastclf/ml/: __init__.py  callbacks.py  dataloader.py  image_preprocessing.py  metrics.py  model.py  run_experiments.py  shared.py  split.py  test.py  train.py  trainer.py  utils.py
hmtest/: cmmd.py  dataloader.py  dataset.py  main.py  mdl.py  model.py  split.py  train.py
hmtest/ml/: __init__.py  _test.py  callbacks.py  dataloader.py  metrics.py  model.py  split.py  test.py  train.py  trainer.py
report/: myrefs.bib  plot_images.py  refs.bib  report.org  report.tex  setupfile.org
report/.auctex-auto/: myrefs.el
