[tool.poetry]
name = "hera-mi-test"
version = "0.1.0"
description = "Research Engineer Entrance Test"
authors = ["Laurent Lejeune <me@lejeunel.org>"]
readme = "README.org"
packages = [{include = 'hmtest'}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
typer = {extras = ["all"], version = "^0.12.3"}
pydicom = "^2.4.4"
requests = "^2.32.3"
tqdm = "^4.66.4"
scikit-learn = "^1.5.0"
scikit-image = "^0.23.2"
keras = "^3.3.3"
pyyaml = "^6.0.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
