[tool.poetry]
name = "hera-mi-test"
version = "0.1.0"
description = "Breast cancer classification"
authors = ["Laurent Lejeune <me@lejeunel.org>"]
readme = "README.org"
packages = [{include = 'hmtest'}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
typer = {extras = ["all"], version = "^0.12.3"}
pydicom = "^2.4.4"
requests = "^2.32.3"
tqdm = "^4.66.4"
scikit-learn = "^1.5.0"
scikit-image = "^0.23.2"
pyyaml = "^6.0.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
torch = {version = "^2.3.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.18.1+cpu", source = "pytorch_cpu"}
torcheval = "^0.0.7"
tensorboard = "^2.17.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
