[tool.poetry]
name = "breast-cancer-cmmd"
version = "0.1.0"
description = "Breast cancer classification"
authors = ["Laurent Lejeune <me@lejeunel.org>"]
readme = "README.org"
packages = [{include = 'breastclf'}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
typer = {extras = ["all"], version = "^0.12.3"}
pydicom = "^2.4.4"
requests = "^2.32.3"
tqdm = "^4.66.4"
scikit-learn = "^1.5.0"
scikit-image = "^0.23.2"
pyyaml = "^6.0.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
torcheval = "^0.0.7"
torch = {version = "^2.3.1+cu118", source = "pytorch_cu11"}
torchvision = {version = "^0.18.1+cu118", source = "pytorch_cu11"}

[[tool.poetry.source]]
name = "pytorch_cu11"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
